<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- App Name -->
    <string name="app_name">Friends Forever</string>

    <!-- Content Descriptions -->
    <string name="app_logo">App Logo</string>

    <!-- Button Texts -->
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="Email">Email Address</string>
    <string name="Password">Password</string>
    <string name="ConfirmPassword">Confirm Password</string>

    <!-- Password Rules -->
    <integer name="min_password_length">8</integer>
    <integer name="min_letters">1</integer>
    <integer name="min_numeric">1</integer>
    <integer name="min_symbols">1</integer>
    <integer name="min_nonletter">1</integer>
    <integer name="max_password_length">16</integer>

    <!-- Drawer Strings -->
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
    <string name="status_message">is on Friends Forever</string>
</resources>
