<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".frontend.pages.RegisterPage">

    <!-- Sign-up form -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center">

        <!-- Image -->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/signimg"
            android:contentDescription="@string/sign_up" />

        <!-- Email input field -->
        <EditText
            android:id="@+id/signup_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:padding="8dp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="8dp"
            android:background="@drawable/edittext_bkg" />

        <!-- Password input field -->
        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/baseline_lock_24"
            android:drawablePadding="8dp"
            android:background="@drawable/edittext_bkg" />

        <!-- Confirm password input field -->
        <EditText
            android:id="@+id/signup_confirm"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:hint="@string/ConfirmPassword"
            android:inputType="textPassword"
            android:drawableStart="@drawable/baseline_password_24"
            android:drawablePadding="8dp"
            android:background="@drawable/edittext_bkg" />

        <!-- Sign-up button -->
        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="30dp"
            android:textSize="18sp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:backgroundTint="@color/lavender"
            app:cornerRadius="30dp" />

    </LinearLayout>

</LinearLayout>
