<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/mainbkg2"
    tools:context=".frontend.pages.LoginPage">
  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="650dp"
      android:layout_margin="30dp"
      app:cardCornerRadius="30dp"
      app:cardElevation="20dp"
      android:layout_gravity="center"

      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/mainbkg"

        >

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:gravity="center"
          android:orientation="vertical"
          android:layout_marginTop="70dp"
          android:padding="20dp"
          >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/purple_700"
            android:textSize="24sp"
            android:textStyle="bold" />
        <!-- Email input field -->
        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittext_bkg"
            android:drawableStart="@drawable/baseline_email_24"
            android:drawablePadding="8dp"
            android:hint="@string/Email"
            android:inputType="textEmailAddress"
            android:padding="8dp" />
        <!-- Password input field -->
        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginTop="20dp"
            android:hint="@string/Password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:background="@drawable/edittext_bkg"
            android:drawableLeft="@drawable/baseline_lock_24"
            />


        <Button
            android:id="@+id/login_button"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/black"
            android:text="@string/login"
            android:textColor="@color/design_default_color_background"
            android:textSize="18sp"
            app:cornerRadius="30dp" />

        <TextView
            android:id="@+id/signUpRedirectText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:text="Not yet registered ? Sign Up"
            android:textAlignment="center"
            android:textColor="@color/blue_200"
            android:textSize="18sp" />
      </LinearLayout>

    </LinearLayout>
  </androidx.cardview.widget.CardView>
</LinearLayout>